<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="2sp"
	>
	<TextView 
	    android:text="@string/choice_year"
	    android:textColor="#fff"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="3sp"
	    />
	<TableLayout 
	    android:id="@+id/yearTL"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="1sp"/>
	<TextView
	    android:text="@string/choice_month"
	    android:textColor="#fff"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="3sp"/>
	<TableLayout 
	    android:id="@+id/monthTL"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="1sp"/>
	<Button
	    android:id="@+id/okButton"
	    android:text="@string/ok"
	    android:textColor="#fff"
	    android:layout_width="fill_parent"
	    android:layout_height="45dp"
	    android:background="@drawable/green_button"
	    android:layout_margin="1sp"/>	
</LinearLayout>