<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_repeat">
    <!-- title bar -->
    <include
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />
    <!-- top bar -->
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:background="@drawable/pw_topbar_background_repeat"
        android:orientation="horizontal">
        <!-- year -->
        <Button 
            android:id="@+id/yearButton"
            android:text="@string/year"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="5sp"
            android:layout_marginTop="2sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:paddingLeft="3sp"
            android:drawableLeft="@drawable/calendar"
            android:background="@drawable/pw_topbar_selected_background"/>
        <!-- month -->
        <Button 
            android:id="@+id/monthButton"
            android:text="@string/month"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_toRightOf="@id/yearButton"
            android:layout_marginRight="5sp"
            android:layout_marginTop="2sp"
            android:layout_centerVertical="true"
            android:background="#00000000"/>
    </RelativeLayout>
    <!-- search bar -->
    <RelativeLayout 
        android:id="@+id/searchbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:background="@drawable/pw_searchbar_background"
        android:padding="3sp"
        android:paddingTop="5sp">
        <!-- compare date -->
		<Button 
            android:id="@+id/compareButton"
            android:text="@string/compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
			android:layout_marginRight="8sp"
			android:layout_marginTop="2sp"
			android:layout_centerVertical="true"
			android:drawableLeft="@drawable/light_off"
			android:drawablePadding="5sp"
            android:background="@drawable/blue_button_disable_bg"/>
        <Button
            android:id="@+id/date1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/compareButton"
            android:layout_centerVertical="true"
            android:layout_marginRight="5sp"
            android:textColor="#fff"
            android:background="@drawable/blue_button"
            android:drawablePadding="5sp"
            android:drawableRight="@drawable/combobox_arrow"/>
        <!-- date2 button -->
        <Button
            android:id="@+id/date2Button"
            android:text="@string/choice_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date1Button"
            android:layout_centerVertical="true"
            android:layout_marginRight="5sp"
            android:textColor="#fff"
            android:background="@drawable/blue_button"
            android:drawablePadding="5sp"
			android:drawableRight="@drawable/combobox_arrow"
            android:visibility="gone"/>"
		<!-- search button -->
        <Button
            android:id="@+id/searchButton"
           	android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:background="@drawable/blue_button"
            android:visibility="gone"/>
    </RelativeLayout>
    <!-- bottom bar -->
	<TableRow android:id="@+id/bottomTableRow"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/bottombar_background_repeat"
	    android:layout_gravity="center_vertical"
	    android:layout_alignParentBottom="true">
        <Button 
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:textColor="#fff"
		    android:background="#00ffffff" 
		    android:layout_weight="1"/>
		<Button 
		    android:id="@+id/underWaterButton"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:paddingRight="5sp"
		    android:text="@string/under_water"
		    android:textColor="#fff"
		    android:background="#00ffffff" 
		    android:layout_weight="1"/>
		<Button 
		    android:id="@+id/surfaceWaterButton"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:paddingRight="5sp"
		    android:text="@string/surface_water"
		    android:textColor="#fff"
			android:background="#00ffffff"
			android:layout_weight="1"/>
		<Button 
		    android:id="@+id/totalWaterButton"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:paddingRight="5sp"
		    android:text="@string/total_water"
		    android:textColor="#fff"
   		 	android:background="@drawable/bottombar_selected_background"  
		    android:layout_weight="1"/>
	</TableRow>
    <!-- content -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"         
        android:layout_below="@id/searchbar"
        android:layout_above="@id/bottomTableRow">
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5sp"
	        android:paddingRight="5sp"
	        android:paddingBottom="5sp"
	        android:orientation="vertical"
	        android:scrollbars="vertical">
	       	<!-- chart title -->
	        <TextView
	            android:id="@+id/chartTextView"
	            android:text="@string/chart"
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	            android:paddingLeft="3sp"
	            android:drawableLeft="@drawable/chart"
	            android:drawablePadding="3sp"
	            android:background="@drawable/detail_category_background" 
	           	android:textColor="#FFF"
	           	/>
	        <!-- chart area -->
	        <RelativeLayout
	            android:id="@+id/chartRelativeLayout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:minHeight="40sp"
	            android:layout_below="@id/chartTextView">
		        <!-- Chart ImageView -->
		        <HorizontalScrollView
		            android:id="@+id/imageScrollView"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="3sp"
		            android:layout_marginRight="3sp">
			        <ImageView 
			            android:id="@+id/imageView"
			            android:contentDescription="@string/empty_string"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content" 
			            />
		        </HorizontalScrollView>
		      	<include 
		            android:id="@+id/chart_progress_float"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
	        		android:layout_marginTop="3sp"
		            layout="@layout/progress_float"/>
	        </RelativeLayout>   
			<!-- data title -->
	        <TextView
	            android:id="@+id/dataTextView"
	            android:text="@string/data"
	            android:textColor="#fff"
	            android:drawableLeft="@drawable/data"
	            android:drawablePadding="3sp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/chartRelativeLayout"
	            android:paddingLeft="3sp"
	            android:background="@drawable/detail_category_background" 
	            />
	        <!-- data area -->
	        <RelativeLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/dataTextView"
	            >
		        <TableLayout 
		            android:id="@+id/dataTableLayout"
		            android:minHeight="40sp"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:padding="3sp"
		            />
		        <include 
		            android:id="@+id/data_progress_float"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="3sp"
		            layout="@layout/progress_float"/>
	        </RelativeLayout>
	    </RelativeLayout>
    </ScrollView>
	
	<!-- pop up layout -->
	<LinearLayout
	    android:id="@+id/popupLinearLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:layout_centerInParent="true"
	    android:padding="30dp"
	    android:background="#c0000000"
	    android:visibility="gone">
        <LinearLayout 
            android:orientation="vertical"
            android:id="@+id/popupContentLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="1sp"
            android:background="@drawable/progress_float_background">
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>