<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_repeat">
    <RelativeLayout 	        
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   	android:layout_weight="0">
	    <include
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			layout="@layout/titlebar" />
	    <Button
	        android:id="@+id/produceWaterTotalButton"
			android:text="@string/produce_water_total"
			android:textColor="#fff"
			android:textSize="14sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1sp"
	        android:layout_marginRight="3sp"
	        android:paddingBottom="3sp"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:drawableLeft="@drawable/ic_produce_water"
	        android:drawablePadding="5sp"
	        android:background="@drawable/blue_button"/> 
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/actionLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
		>
		<!-- background of top bar -->
		<include 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    layout="@layout/topbar"/>
		<!-- progress for loading -->
	    <include
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        layout="@layout/progress"
	        android:layout_alignParentLeft="true"
			/>        
		<!-- icon of hint -->
		<ImageButton
		    android:id="@+id/hintImageView"
		    android:contentDescription="@string/empty_string"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="3sp"
		    android:layout_alignParentLeft="true"
		    android:layout_centerVertical="true"
		    android:background="@drawable/lightbulb_on"/>
		<!-- text of hint -->
		<TextView 
		    android:id="@+id/longClickHintTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/long_click_hint"
		    android:textSize="12dp"
		    android:layout_toRightOf="@id/hintImageView"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="3sp"
		    android:layout_marginRight="3sp"
		    />
		<!-- cancel button for canceling edit mode -->
		<Button 
		    android:id="@+id/detailButton"
		    android:text="@string/detail_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:layout_margin="3sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            />
		<Button
            android:id="@+id/cancelButton"
            android:text="@string/cancel_button"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:layout_margin="3sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:visibility="gone"
            />
	</RelativeLayout>
	<!-- data from dispatching system -->
	<ListView 
	    android:id="@+id/listView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:cacheColorHint="#00000000"
	    android:divider="@drawable/divider"
	    android:layoutAnimation="@anim/list_anim"/>
	<!-- background of bottom bar -->
	<LinearLayout
	    android:id="@+id/bottomLinearLayout" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="0" 
	    android:background="@drawable/bottombar_background_repeat" 
	  	android:layout_gravity="bottom"/>
</LinearLayout>