<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="3sp"
    android:paddingBottom="3sp"
    >
    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginLeft="5sp"
        android:contentDescription="@string/empty_string"
       	android:src="@drawable/ic_linear"/>"
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iconImageView"
        android:layout_marginRight="3sp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout 
           		android:layout_width="0dp"
            	android:layout_height="wrap_content"
            	android:layout_weight="1">
            	<TextView 
	                android:id="@+id/valueTextView"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		            android:textSize="20dp"
					android:layout_gravity="center_vertical"
		            android:textColor="#ff0000"
					android:typeface="monospace"/>
				<TextView 
				    android:id="@+id/updateTimesTextView"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		            android:textSize="9dp"
		            android:textColor="#fff"
					android:layout_gravity="center_vertical"
					android:background="@drawable/update_bg"
					android:layout_marginLeft="15sp"
					android:typeface="monospace"/>
				<TextView 
				    android:id="@+id/lostTimesTextView"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		            android:textSize="9dp" 
		            android:textColor="#fff"
		            android:background="@drawable/lost_bg"
		            android:layout_marginLeft="5sp"
					android:layout_gravity="center_vertical"
					android:typeface="monospace"/>
            </LinearLayout>
            <Button 
                android:id="@+id/button_addfavorite"
                android:text="@string/add_to_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#fff"
                android:textSize="12sp"
                android:background="@drawable/favorite_button_selector"
                android:visibility="gone"/>
			<Button android:id="@+id/button_deletefavorite"
                android:text="@string/delete_from_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="#fff"
                android:textSize="14sp"
                android:background="@drawable/green_button_bg"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView 
                android:id="@+id/dataTagNameTextView" 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_weight="0"
        		android:textColor="#52b3fd"/>
            <TextView 
                android:id="@+id/receivedTimeTextView"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:layout_weight="1"
        		android:textSize="12dp"
                android:gravity="right"
                android:typeface="monospace"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>